--- a/ShopListPriceEditor/Properties/Resources.resx
+++ b/ShopListPriceEditor/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="hammer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\hammer.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="itemData" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Constants\itemData.itm;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
